test/files/neg/t4990-mig-29.check
t4990-mig-29.scala:3: error: method scanRight in trait TraversableLike has changed semantics in version 2.9.0:
The behavior of `scanRight` has changed. The previous behavior can be reproduced with scanRight.reverse.
  List(1, 2, 3, 4).scanRight(0)(_ + _) //@migrated in 2.9
                   ^
one error found
